--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -11,8 +11,8 @@
     "WebApplication4": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:5232",
+      "launchBrowser": false,
+      "applicationUrl": "http://localhost:5010",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
